# Warden-Free

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  package.ps1  package.sh
docs/: GPL-NOTICES.md  bridge-protocol.md
headers/: MainWindow.h
headers/warden/bridge/: ClamAvBridgeProtocol.h  ClamAvBridgeService.h
headers/warden/core/: AppPaths.h  ScanTypes.h  ThreatAggregation.h
headers/warden/network/: DefinitionUpdater.h
headers/warden/scanner/: ClamAvOnlyCoordinator.h  ClamAvScanner.h  FileScanWorker.h  FileWalker.h  HeuristicAnalyzer.h  QuarantineManager.h  ScanCoordinator.h  Sha256Hasher.h
headers/warden/storage/: StateStore.h
packaging/linux/: warden-free.desktop
packaging/windows/: installer.nsi  warden-free.rc
resources/: warden_resources.qrc
src/: MainWindow.cpp  main.cpp
src/bridge/: ClamAvBridgeService.cpp  main_bridge.cpp
src/core/: AppPaths.cpp  ThreatAggregation.cpp
src/network/: DefinitionUpdater.cpp
src/scanner/: ClamAvOnlyCoordinator.cpp  ClamAvScanner.cpp  FileScanWorker.cpp  FileWalker.cpp  HeuristicAnalyzer.cpp  QuarantineManager.cpp  ScanCoordinator.cpp  Sha256Hasher.cpp
src/storage/: StateStore.cpp
